# CPP-Reflection

./: .gitignore  CMakeLists.txt
3rd/: CMakeLists.txt
Examples/: CMakeLists.txt  FunctionsAndMethods.cpp  TestProperties.h  TestReflectionModule.h  TestTypes.h
Resources/Templates/: module-file-source.mustache
Source/CMake/: FindLLVM.cmake  MetaParser.cmake  utility.cmake
Source/Common/: CMakeLists.txt  Logging.hpp
Source/Parser/: CMakeLists.txt  Cursor.cpp  Cursor.h  CursorType.cpp  Main.cpp  MetaDataManager.cpp  MetaDataManager.h  MetaUtils.cpp  MetaUtils.h  MetaUtils.hpp  Precompiled.cpp  Precompiled.h  ReflectionOptions.h  ReflectionParser.cpp  ReflectionParser.h  Switches.h
Source/Parser/LanguageTypes/: Class.cpp  Class.h  Constructor.cpp  Constructor.h  Enum.cpp  Enum.h  External.cpp  External.h  Field.cpp  Field.h  Function.cpp  Function.h  Global.cpp  Global.h  Invokable.cpp  Invokable.h  LanguageType.cpp  LanguageType.h  Method.cpp  Method.h
Source/Parser/Tokenizer/: Token.h  TokenType.h  Tokenizer.h  TokenizerResult.h  TokenizerState.h
Source/Runtime/: Argument.cpp  Argument.h  Array.h  ArrayVariantContainer.h  ArrayWrapper.cpp  ArrayWrapper.h  ArrayWrapperBase.h  ArrayWrapperContainer.h  CMakeLists.txt  Constructor.cpp  Constructor.h  ConstructorInvoker.h  ConstructorInvokerBase.h  Destructor.cpp  Destructor.h  DestructorInvoker.h  DestructorInvokerBase.h  Enum.cpp  Enum.h  EnumBase.cpp  EnumBase.h  EnumContainer.h  Field.cpp  Field.h  FieldGetter.h  FieldSetter.h  Function.cpp  Function.h  FunctionInvoker.h  FunctionInvokerBase.h  Global.cpp  Global.h  GlobalGetter.h  GlobalSetter.h  Invokable.cpp  Invokable.h  Macros.h  Meta.h  MetaContainer.cpp  MetaContainer.h  (+31 more)
Source/Runtime/Impl/: ArrayVariantContainer.hpp  ArrayWrapper.hpp  ArrayWrapperContainer.hpp  Constructor.hpp  ConstructorInvoker.hpp  DestructorInvoker.hpp  Invokable.hpp  MetaManager.hpp  Method.hpp  Type.hpp  TypeCreator.hpp  TypeData.hpp  TypeInfo.hpp  Variant.hpp  VariantContainer.hpp
